# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
02-workflow-orchestration/: .env_encoded  docker-compose.yaml  homework-2
homework-1/: Dockerfile  hw-1-notebook.ipynb  hw-1-notebook.py  ingest_test.ipynb  pyproject.toml
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  ingest_test.ipynb  notebook.ipynb  pipeline.py  pyproject.toml
terraform-demo/: main.tf  variables.tf
week-3/: homework-code  load_yellow_taxi_data.py  upload_to_gcp.py
