[project]
name = "homework-1"
version = "0.1.0"
description = "I'm using this to be able to use a jupyter notebook to upload data for homework-1"
readme = "README.md"
requires-python = ">=3.13"
[tool.uv]
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
